k8s-apps/media/qbittorrent/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/managed-by: argocd
